# swagger/openapi-restserver.yaml
@@ -3630,6 +3630,235 @@ paths:
         - tokenCheck: []
         - BearerAuth:
             - admin
+  /rest/extend/{path}:
+    get:
+      tags:
+        - Extend
+      description: Call plugin extend
+      operationId: callExtend
+      parameters:
+        - name: path
+          in: path
+          description: Identifier of the file location
+          required: true
+          schema:
+            type: string
+        - name: param
+          in: query
+          description: Parameters
+          schema:
+            type: array
+            items:
+              type: string
+      responses:
+        '200':
+          description: Successful response, with download binary file.
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        '400':
+          description: Environment evaluation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Authorization error
+          content: {}
+        '403':
+          description: Role access denied
+          content: {}
+        '404':
+          description: Location/Plugin not available/unknown
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        default:
+          description: Error authorization
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BasicAuth: []
+        - tokenCheck: []
+        - BearerAuth:
+            - admin
+    put:
+      tags:
+        - Extend
+      description: Put extend/plugin request
+      operationId: triggerExtend
+      parameters:
+        - name: path
+          in: path
+          description: Identifier of the file location
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response, if the directory is created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatusResponse'
+        '400':
+          description: Environment evaluation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Authorization error
+          content: {}
+        '403':
+          description: Role access denied
+          content: {}
+        '404':
+          description: Location not available/unknown
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        default:
+          description: Error authorization
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BasicAuth: []
+        - tokenCheck: []
+        - BearerAuth:
+            - admin
+    post:
+      tags:
+        - Extend
+      description: Post extend/plugin
+      operationId: callPostExtend
+      parameters:
+        - name: path
+          in: path
+          description: Identifier of the file location
+          required: true
+          schema:
+            type: string
+        - name: file
+          in: query
+          description: Identifier of the file location
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - uploadExtendData
+              properties:
+                uploadFile:
+                  type: string
+                  description: Upload data
+                  format: binary
+        required: true
+      responses:
+        '200':
+          description: Successful response, with download binary file.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatusResponse'
+            text/plain:
+              schema:
+                type: string
+        '400':
+          description: Environment evaluation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Authorization error
+          content: {}
+        '403':
+          description: Role access denied
+          content: {}
+        '404':
+          description: Location not available/unknown
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        default:
+          description: Error authorization
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BasicAuth: []
+        - tokenCheck: []
+        - BearerAuth:
+            - admin
+    delete:
+      tags:
+        - Extend
+      description: Delete extend/plugin data
+      operationId: deleteExtend
+      parameters:
+        - name: path
+          in: path
+          description: Identifier of the file location
+          required: true
+          schema:
+            type: string
+        - name: file
+          in: query
+          description: Identifier of the file location
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response, if delete of file done.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatusResponse'
+        '400':
+          description: Environment evaluation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Authorization error
+          content: {}
+        '403':
+          description: Role access denied
+          content: {}
+        '404':
+          description: Location not available/unknown
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        default:
+          description: Error authorization
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      security:
+        - BasicAuth: []
+        - tokenCheck: []
+        - BearerAuth:
+            - admin
 components:
   schemas:
     SQLQuery:
